// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListHeader for multiple expenses 1`] = `
<div
  className="list_header"
>
  <h2>
    2
     
    expenses
     found for a total of 
    US$ 4,500.00
  </h2>
</div>
`;

exports[`should render ExpenseListHeader for one expense 1`] = `
<div
  className="list_header"
>
  <h2>
    1
     
    expense
     found for a total of 
    US$ 2.00
  </h2>
</div>
`;
